kubernetes/apps/model-pipeline/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: model-pipeline
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: burakince/mlflow
          imagePullPolicy: IfNotPresent
          command:
            - mlflow
          args:
            - server
            - --host
            - 0.0.0.0
            - --port
            - "5000"
            - --backend-store-uri
            - $(MLFLOW_BACKEND_STORE_URI)
            - --artifacts-destination
            - s3://mlflow
            - --app-name
            - basic-auth
            - --serve-artifacts
          volumeMounts:
            - name: auth-config
              mountPath: /auth
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
      volumes:
        - name: auth-config
          emptyDir: {}
